# motamaze_backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  firestore.rules  pyproject.toml
app/: config.py  dependencies.py  main.py
changelogs/: AUTH-004-apple-signin-multi-provider.md  CI-001-cicd-github-actions.md  DATA-001-bigquery-analytics-tables.md  DATA-002-firestore-bigquery-streaming.md  DATA-003-admob-reporting-api.md  EXT-001-google-play-developer-api.md  EXT-002-admob-account-ad-units.md  INFRA-001-gcp-base-infra.md  INFRA-002-env-secrets-design.md  INFRA-003-fastapi-scaffold-cloud-run.md  INFRA-004-rs256-keypair-secret-manager.md  INFRA-005-firestore-schema-security-rules.md  INFRA-006-dev-staging-prod-terraform.md  PAY-001-android-purchase-verification.md  PAY-002-daily-reconciliation-job.md  PAY-004-apple-purchase-verification.md  README.md  REST-001-rest-api-contract.md  T-115-cloud-monitoring.md  T-123-account-deletion.md  T-210-progress-backend.md  T-220-lives-backend.md  T-240-store-catalog-promotions.md  T-244-remote-config-lives-tunables.md  T-254-refund-notifications.md  T-302-ad-revenue-reconciliation.md  T-303-looker-studio-dashboards.md  T-311-tenjin-share-tracking-link.md  T-400-region-aware-age-logic.md  T-401-verifiable-parental-consent.md  T-402-br-age-signal-reconciliation.md  T-402-google-play-data-safety-note.md  T-402-store-age-signal-contract.md  T-404-monthly-age-threshold-recalc.md  T-406-iarc-content-rating.md  T-407-latam-age-thresholds.md  T-414-upgrade-firebase-blaze.md  T-440-share-score-backend.md  T-443-leaderboard-backend.md
(+74 files in other folders)
