[project]
name = "motamaze-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "google-cloud-firestore>=2.16",
    "google-cloud-bigquery>=3.20",
    "google-cloud-secret-manager>=2.20",
    "google-auth>=2.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "cachetools>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
